feat: carte recette stylée + bouton nouvelle photo

--- a/index.html
+++ b/index.html
@@ -27,15 +27,14 @@
 
             <div id="ingredients-recognition-section" class="hidden">
                 <p>Ingrédients reconnus :</p>
-                <div id="ingredients-list">
-                    </div>
+                <div id="ingredients-list"></div>
             </div>
-            
+
             <button id="get-recipe-btn" class="hidden">Générer ma recette</button>
         </div>
 
-        <div id="result-section" class="hidden">
-            </div>
+        <div id="result-section" class="hidden"></div>
+        <button id="reset-btn" class="hidden">📷 &nbsp;Nouvelle photo</button>
     </main>
 
     <script src="script.js"></script>
